<resources>
    <string name="app_name">DebtSpace</string>

    <!-- Main screen (debt list) -->

    <!-- Requests -->
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="send_request">Send a request?</string>
    <string name="remove_friend">Do you want to remove a friend?</string>
    <string name="remove_debt">Notify a friend that you want to cancel this debt?</string>
    <string name="remove_debt_confirm">Do you want to remove this debt?</string>
    <string name="confirmation_code_message">Enter the characters below to confirm:</string>
    <string name="confirm_request">Accept the friend request?</string>
    <string name="user_search">User search</string>
    <string name="yes">Yes</string>
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>

    <string name="user_full_name" translatable="false">%1$s %2$s</string>
    <string name="open_image">Open image</string>
    <string name="change_image">Change image</string>
    <string name="delete_image">Delete image</string>
    <string name="upload_image">Upload image</string>
    <string name="total_debt">Total debt:</string>
    <string name="debt">Debt</string>
    <string name="comment">Comment</string>
    <string name="strike">Strike</string>

    <string name="profile">Profile</string>
    <string name="debts">Debts</string>
    <string name="history">History</string>
    <string name="notifications">Notifications</string>

    <!-- Settings Screen(Navigation View)   -->
    <string name="account">Account</string>
    <string name="userID">ID:</string>
    <string name="phone">Phone:</string>
    <string name="settingsSet">Settings</string>
    <string name="language">Language</string>
    <string name="support">Support</string>

    <!--  Sign in   &   Sign up  -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign in</string>
    <string name="sing_up">Sign up</string>
    <string name="error">The entered data is not correct</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="name">Username</string>

    <!-- Group debt -->
    <string name="update_group">Update group</string>
    <string name="create_group">Create Group</string>
    <string name="new_group_debt">New group debt</string>
    <string name="group_name">Group name</string>
    <string name="group_debt">Group debt</string>
    <string name="add_friend">Add friend</string>
    <string name="all_users">All users</string>
    <string name="friends">Friends</string>
    <string name="groups" translatable="false">Groups</string>
    <string name="back">Back</string>

    <!-- Network -->
    <string name="network_lost_message">Lost Internet connection :(</string>
    <string name="ok">OK</string>

</resources>
