<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent">
    <item  android:title="@string/account">
        <menu>
            <item android:id="@+id/nav_id"
                android:title=""
                android:icon="@drawable/ic_id"/>
        </menu>
    </item>

    <item  android:title="@string/settingsSet">
        <menu>
            <item android:id="@+id/nav_lang"
                android:title="@string/language"
                android:icon="@drawable/ic_language"/>
            <item android:id="@+id/nav_sup"
                android:title="@string/support"
                android:icon="@drawable/help"/>
        </menu>
    </item>
</menu>