<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".auth.activities.AuthActivity">

    <data>

        <variable
            name="User"
            type="com.example.debtspace.models.User" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/back_gradient"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/email"
                style="@style/editAuth"
                android:layout_width="300dp"
                android:background="@drawable/rounded_light"
                android:hint="@string/email" />

            <EditText
                android:id="@+id/password"
                style="@style/editAuth"
                android:layout_width="300dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_light"
                android:hint="@string/password" />

            <Button
                android:id="@+id/button_sign_in"
                style="@style/buttonAuth"
                android:layout_width="300dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_dark"
                android:text="@string/sing_in" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/sign_in_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:indeterminate="true" />

            <TextView
                android:id="@+id/sign_in_error"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/error"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <Button
                android:id="@+id/from_sign_in_to_sign_up"
                style="@style/buttonText"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="64dp"
                android:elevation="0dp"
                android:text="@string/sing_up"
                android:textSize="16sp" />
        </LinearLayout>
    </FrameLayout>
</layout>
