<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:elevation="4dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:elevation="4dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/confirmation_code_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmation_code_message"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/generated_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/confirmation_code_message"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/input_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/generated_code"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/input_field"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clear_button"
                style="@style/buttonAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_dark"
                android:text="@string/clear"
                android:textSize="24sp" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/Dark"
                android:textSize="24sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>
