<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    android:background="@color/white"
    android:elevation="4dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/friend_request"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:elevation="4dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/request_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/request_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/request_name"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friend_request_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/request_username"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/send_request"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/friend_request_message"
            android:orientation="horizontal">

            <Button
                android:id="@+id/friend_request_yes"
                style="@style/buttonAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rounded_dark"
                android:text="@string/yes"
                android:textSize="24dp" />

            <Button
                android:id="@+id/friend_request_cancel"
                style="@style/buttonText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/Dark"
                android:textSize="24sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/request_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:indeterminate="true" />
    </RelativeLayout>
</RelativeLayout>