<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/whiteBlue">

    <TextView
        android:layout_marginTop="24dp"
        android:id="@+id/group_debt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/new_group_debt"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/group_debt_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_debt_title"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/group_debt_image"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:background="@color/whiteBlue"
                android:id="@+id/group_debt_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/group_name"
                android:textSize="16sp"
                tools:ignore="NestedWeights" />

            <EditText
                android:background="@color/whiteBlue"
                android:id="@+id/group_debt_debt"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:hint="@string/group_debt"
                android:textSize="16sp"/>
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:background="@color/whiteBlue"
        android:id="@+id/group_debt_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/group_debt_data"
        android:layout_marginStart="48dp"
        android:hint="Add friend"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/group_debt_lists"
        android:layout_width="match_parent"
        android:layout_height="248dp"
        android:layout_below="@id/group_debt_search"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_debt_found_list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/group_debt_added_list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent" />
    </LinearLayout>

    <Button
        android:background="@drawable/rounded_dark"
        style="@style/buttonAuth"
        android:id="@+id/button_submit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/group_debt_lists"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Create Group"/>

    <ProgressBar
        android:id="@+id/group_debt_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:indeterminate="true" />
</RelativeLayout>
